changes in css file

--- a/products-index.html
+++ b/products-index.html
@@ -6,7 +6,7 @@
     <title>Add To Cart - Yrabella</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
-    <link rel="stylesheet" href="assets/css/style2.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
 
@@ -41,8 +41,8 @@
     <!-- end of header -->
 
     <!-- products section  -->
-    <section class = "products">
-      <div class = "container">
+    <section>
+      <div class = "containerForProductsAddtoCart">
         <h2>Our Products</h2>
         <div class = "product-list">
 
