added forms change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script defer src="assets/script/main.js"></script>
     <nav class="navbar">
-        <span class="style-for-logo">Y R A _ T A N D U A Y</span>
+        <span class="style-for-logo">Y R A _S U G A N O</span>
         <ul class="nav-links">
           <input type="checkbox" id="checkbox_toggle">
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
