login and sign up design

--- a/loginForm.html
+++ b/loginForm.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styleForm.css">
-    <script src="assets/script/loginForm.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
+    <script src="assets/script/login.js"></script>
     <title>Login Form</title>
 </head>
 <body>
-    <div class="container">
+    <a href="index.html" class="gobackbtn"><i class="fa-solid fa-right-to-bracket fa-rotate-180"></i></a>
+    <div class="containerForSignUp">
         <div class="form login-form">
+            <img src="assets/images/Header-banner.png" class="login-image">
             <h2>Login</h2>
             <form id="loginForm">
                 <select required>
