--- a/products-index.html
+++ b/products-index.html
@@ -31,6 +31,11 @@
               <div class = "cart-total">
                 <h3>Total: P</h3>
                 <span id = "cart-total-value"></span>
+                <button class="btn-buy">Place Order</button>
+
+                <ion-icon 
+                name="close" id="cart-close">
+                </ion-icon>
               </div>
             </div>
           </div>
