added features and conditions

--- a/signUpForm.html
+++ b/signUpForm.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
-    <script src="assets/script/signUp.js"></script>
-    <title>Sign Up Form for YraBella Spa</title>
+    <script defer src="assets/script/signUp.js"></script>
+    <title>Sign up Form</title>
 </head>
 <body>
-    <div class="containerForSignUp">
-        <a href="loginForm.html" class="gobackbtn"><i class="fa-solid fa-right-to-bracket fa-rotate-180"></i></a>
+    <div class="container">
         <div class="form sign-up-form">
-        
-            <span class="SignUpTextDesign">Sign Up</span>
+            <h2>Sign Up</h2>
             <form id="signupForm">
-                <select required>
-                    <option value="" disabled selected>Select Role</option>
-                    <option value="admin">Admin</option>
-                    <option value="user">User</option>
-                </select>
                 <div class="name-container">
                     <div class="fname">
                         <input type="text" id="firstname" placeholder="Firstname" required>
