--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styleAdmin.css">
     <script defer src="assets/script/adminDash.js"></script>
   </head>
@@ -44,37 +43,38 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="adminDashboard.html" class="href-button">
               <span class="material-icons-outlined">dashboard</span> Dashboard
             </a>
           </li>
           <li class="sidebar-list-item">
             <a href="#" target="_blank">
+            <a href="products-index.html" class="href-button">
               <span class="material-icons-outlined">inventory_2</span> Products
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="products-index.html" class="href-button">
               <span class="material-icons-outlined">fact_check</span> Inventory
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="products-index.html" class="href-button">
               <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="adminDashboard.html" class="href-button">
               <span class="material-icons-outlined">shopping_cart</span> Sales Orders
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="adminDashboard.html" class="href-button">
               <span class="material-icons-outlined">poll</span> Reports
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="adminDashboard.html" class="href-button">
               <span class="material-icons-outlined">settings</span> Settings
             </a>
           </li>
