--- a/loginForm.html
+++ b/loginForm.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
-    <script src="assets/script/login.js"></script>
+    <script defer src="assets/script/loginForm.js"></script>
     <title>Login Form</title>
 </head>
 <body>
-    <a href="index.html" class="gobackbtn"><i class="fa-solid fa-right-to-bracket fa-rotate-180"></i></a>
-    <div class="containerForSignUp">
+    <div class="container">
         <div class="form login-form">
-            <img src="assets/images/Header-banner.png" class="login-image">
-            <h2>Login</h2>
+            <h2>User Login</h2>
             <form id="loginForm">
-                <select required>
-                    <option value="" disabled selected>Select Role</option>
-                    <option value="admin">Admin</option>
-                    <option value="user">User</option>
-                </select>
                 <input type="text" id="username" placeholder="Username" required>
                 <input type="password" id="password" placeholder="Password" required>
                 <button type="submit">Login</button>
@@ -29,6 +21,7 @@
             </div>
             <a href="signUpForm.html" class="custom-button">Create New Account</a>
         </div>
+        <div id="messageBox"></div>
     </div>
     
 </body>
