--- a/userDashboard.html
+++ b/userDashboard.html
@@ -39,27 +39,27 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="userDashboard.html" class="href-button">
               <span class="material-icons-outlined">dashboard</span> Dashboard
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="bookAppointment.html" class="href-button">
               <span class="material-icons-outlined">inventory_2</span> Appointment
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="products-index.html" class="href-button">
               <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="services-facial-index.html" class="href-button">
               <span class="material-icons-outlined">poll</span> Services
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#" target="_blank">
+            <a href="userDashboard.html" class="href-button">
               <span class="material-icons-outlined">settings</span> Settings
             </a>
           </li>
@@ -71,42 +71,53 @@
 
       <main class="main-container">
         <div class="main-title">
-          <p class="font-weight-bold">DASHBOARD</p>
+          <p class="font-weight-bold">USER DASHBOARD</p>
+          
         </div>
 
         <div class="main-cards">
 
           <div class="card">
             <div class="card-inner">
+            <a href="products-index.html" class="href-button">
               <p class="text-primary">PRODUCTS</p>
-              <span class="material-icons-outlined text-blue">inventory_2</span>
+            </a>
+              <span class="material-icons-outlined text-blue" style="font-size: 36px;">inventory_2</span>
+            
             </div>
             <span class="text-primary font-weight-bold">249</span>
           </div>
 
           <div class="card">
             <div class="card-inner">
-              <p class="text-primary">PURCHASE ORDERS</p>
-              <span class="material-icons-outlined text-orange">add_shopping_cart</span>
+              <a href="bookAppointment.html" class="href-button">
+              <p class="text-primary">APPOINTMENT</p>
+              </a>
+              <i class="fa-regular fa-calendar-check fa-2x" style="color: #F5B74F;"></i>
             </div>
-            <span class="text-primary font-weight-bold">83</span>
+            <span class="text-primary font-weight-bold">3</span>
           </div>
-
           <div class="card">
             <div class="card-inner">
+            <a href="services-facial-index.html" class="href-button">
               <p class="text-primary">SERVICES</p>
-              <span class="material-icons-outlined text-green">shopping_cart</span>
+            </a>
+              <i class="fa-regular fa-handshake fa-2x" style="color: #367952"></i>
             </div>
-            <span class="text-primary font-weight-bold">79</span>
+            <span class="text-primary font-weight-bold">4</span>
           </div>
 
           <div class="card">
             <div class="card-inner">
-              <p class="text-primary">INVENTORY ALERTS</p>
-              <span class="material-icons-outlined text-red">notification_important</span>
+            <a href="promo-index.html" class="href-button">
+              <p class="text-primary">PROMO</p>
+            </a>
+            <i class="fa-solid fa-hand-holding-dollar fa-2x" style="color: #CC3C43"></i>
+              <!-- <i class="fa-regular fa-handshake fa-2x" style="color: #367952"></i> -->
             </div>
-            <span class="text-primary font-weight-bold">56</span>
+            <span class="text-primary font-weight-bold">13 Products on Sale</span>
           </div>
+
 
         </div>
 
