--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script defer src="assets/script/main.js"></script>
     <nav class="navbar">
-        <span class="style-for-logo">Y R A _ B E L L A</span>
+        <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
         <ul class="nav-links">
           <input type="checkbox" id="checkbox_toggle">
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
@@ -84,7 +84,7 @@
         <div class="people-section">
             <div class="people">
                 <div class="photo photo1"></div>
-                <span>Evens Louis-Charles</span>
+                <span>Kevin Louis-Charles</span>
                 <span>_________________</span>
                 <span>CEO</span>
             </div>
@@ -196,7 +196,7 @@
     
     <footer>
         <div class="footer-logo">
-            <span class="style-for-logo">Y R A _ B E L L A</span>
+            <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
         </div>
         <div class="container-for-footer-content">
             <div class="content-for-footer">
@@ -249,6 +249,27 @@
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
+            </div>
+
+        </div>
+        <div class="colaborators">
+            <div class="colaborator">
+                <img src="assets/images/devin.jpg">
+                <span>Devin Manalang</span>
+                <span>_________________</span>
+                <span>Colaborator I</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/sweetlLyra.jpg">
+                <span>Sweet Lyra Sugano</span>
+                <span>_________________</span>
+                <span>Colaborator II</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/kenneth.jpg">
+                <span>Kenneth Abenoja</span>
+                <span>_________________</span>
+                <span>Colaborator III</span>
             </div>
 
         </div>
