--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -8,14 +8,35 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
 
-    <link rel="stylesheet" href="assets/css/styleAdmin.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script defer src="assets/script/adminDash.js"></script>
   </head>
   <body>
+    <nav class="navbar">
+      <span class="style-for-logo">Y R A _ B E L L A</span>
+      <ul class="nav-links">
+        <input type="checkbox" id="checkbox_toggle">
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+          <div class="menu">
+              <div>
+                <li><a href="index.html">HOME</a></li>
+                <li class="services">
+                  <a href="#services">SERVICES</a>
+                  <ul class="dropdown">
+                    <li><a href="services-facial-index.html">Facial Services </a></li>
+                    <li><a href="services-hair-index.html">Hair Services</a></li>
+                    <li><a href="services-nails-index.html">Nail Services</a></li>
+                    <li><a href="services-bodyMassage-index.html">Body Massage</a></li>
+                  </ul>
+                </li>
+                  <li><a href="products-index.html">PRODUCTS</a></li>
+                  <li><a href="#aboutUs">ABOUT US</a></li>
+              </div>
+          </div>
+      </ul>
+  </nav>
     <div class="grid-container">
-
-      <!-- Header -->
-      <header class="header">
+      <header class="headerForDashboard">
         <div class="menu-icon" onclick="openSidebar()">
           <span class="material-icons-outlined">menu</span>
         </div>
