--- a/virtual-tour-index.html
+++ b/virtual-tour-index.html
@@ -8,6 +8,30 @@
     <script src="https://kit.fontawesome.com/2791784218.js" crossorigin="anonymous"></script> 
 </head>
 <body>
+    <nav class="navbar">
+        <span class="style-for-logo">Y R A _ B E L L A</span>
+        <ul class="nav-links">
+          <input type="checkbox" id="checkbox_toggle">
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <div class="menu">
+                <div>
+                    <li><a href="index.html">HOME</a></li>
+                    <li class="services">
+                        <a href="#services">SERVICES</a>
+                            <ul class="dropdown">
+                                <li><a href="services-facial-index.html">Facial Services </a></li>
+                                <li><a href="services-hair-index.html">Hair Services</a></li>
+                                <li><a href="services-nails-index.html">Nail Services</a></li>
+                                <li><a href="services-bodyMassage-index.html">Body Massage</a></li>
+                            </ul>
+                    </li>
+                    <li><a href="products-index.html">PRODUCTS</a></li>
+                    <li><a href="#aboutUs">ABOUT US</a></li>
+                    <a href="loginForm.html" class="login-button">Login</a><!--HREF this-->
+                </div>
+            </div>
+        </ul>
+    </nav>
     <div class="virtualtourSection">
         <span class="virtualTourTitleText">INTERIOR DESIGN</span>    
         <div class="receptionSection">
