--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li><a href="products-index.html">PRODUCTS</a></li>
                     <li><a href="#aboutUs">ABOUT US</a></li>
-                    <a href="loginForm.html" class="login-button">Login</a><!--HREF this-->
+                    <a href="loginForm.html" class="login-button">Login</a>
                 </div>
             </div>
         </ul>
