--- a/services-hair-index.html
+++ b/services-hair-index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li><a href="/">PRODUCTS</a></li>
                     <li><a href="#">ABOUT US</a></li>
-                    <button>Login </button>
+                    <a href="loginForm.html" class="login-button">Login</a>
                 </div>
             </div>
         </ul>
@@ -269,7 +269,7 @@
     </div>
     <footer>
         <div class="footer-logo">
-            <span class="style-for-logo">Y R A _ B E L L A</span>
+            <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
         </div>
         <div class="container-for-footer-content">
             <div class="content-for-footer">
@@ -322,6 +322,27 @@
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
+            </div>
+
+        </div>
+        <div class="colaborators">
+            <div class="colaborator">
+                <img src="assets/images/devin.jpg">
+                <span>Devin Manalang</span>
+                <span>_________________</span>
+                <span>Colaborator I</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/sweetlLyra.jpg">
+                <span>Sweet Lyra Sugano</span>
+                <span>_________________</span>
+                <span>Colaborator II</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/kenneth.jpg">
+                <span>Kenneth Abenoja</span>
+                <span>_________________</span>
+                <span>Colaborator III</span>
             </div>
 
         </div>
