--- a/userDashboard.html
+++ b/userDashboard.html
@@ -146,5 +146,91 @@
     </div>
     <!-- ApexCharts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.41.1/apexcharts.min.js"></script>
-  </body>
+    <footer>
+      <div class="footer-logo">
+          <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
+      </div>
+      <div class="container-for-footer-content">
+          <div class="content-for-footer">
+              <span class="footer-highlight">VISIT BRANCH NEAR YOU</span>
+              <span>
+                  <dl>
+                      <dt>SINDANGAN</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/c9MYdfNaugEcbmio6">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>LABASON</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/k5xeUwUzedR7fJ6u5">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>TAMPILISAN</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/dcUVXatwPVZxZF5eA">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>DIPOLOG</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/v7yLpdHGQNscF9cV7">View in Google Map</a></dd>
+                  </dl>
+              </span>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">OPEN HOURS</span>
+              <p>Sunday: 10am-6pm</p>
+              <p>Monday: 10am-8pm</p>
+              <p>Tues-Friday: 9am-8pm</p>
+              <p>Saturday: 9am-5pm</p>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">BOOK AN APPOINTMENT</span>
+              <p>+639762929866</p>
+              <p><a href="#">yrabella_beauty@gmail.com</a></p>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">FOLLOW US</span>
+              <div class="follow-us-section">
+                  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+              </div>
+          </div>
+
+      </div>
+      <div class="colaborators">
+          <div class="colaborator">
+              <img src="assets/images/devin.jpg">
+              <span>Devin Manalang</span>
+              <span>_________________</span>
+              <span>Colaborator I</span>
+          </div>
+          <div class="colaborator">
+              <img src="assets/images/sweetlLyra.jpg">
+              <span>Sweet Lyra Sugano</span>
+              <span>_________________</span>
+              <span>Colaborator II</span>
+          </div>
+          <div class="colaborator">
+              <img src="assets/images/kenneth.jpg">
+              <span>Kenneth Abenoja</span>
+              <span>_________________</span>
+              <span>Colaborator III</span>
+          </div>
+
+      </div>
+      <div class="copyright">
+          <span>Copyright © 2023 YRA_BELLA BEAUTY. All Rights Reserved.</span>
+      </div>
+
+  </footer>
+
+  
+</body>
 </html>
