--- a/products-index.html
+++ b/products-index.html
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <nav class="navbar">
+      <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
+      <ul class="nav-links">
+        <input type="checkbox" id="checkbox_toggle">
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+          <div class="menu">
+              <div>
+                  <li><a href="index.html">HOME</a></li>
+                  <li class="services">
+                      <a href="#services">SERVICES</a>
+                          <ul class="dropdown">
+                              <li><a href="services-facial-index.html">Facial Services </a></li>
+                              <li><a href="services-hair-index.html">Hair Services</a></li>
+                              <li><a href="services-nails-index.html">Nail Services</a></li>
+                              <li><a href="services-bodyMassage-index.html">Body Massage</a></li>
+                          </ul>
+                  </li>
+                  <li><a href="products-index.html">PRODUCTS</a></li>
+                  <li><a href="index.html #aboutUs">ABOUT US</a></li>
+                  <a href="loginForm.html" class="login-button">Login</a>
+              </div>
+          </div>
+      </ul>
+  </nav>
 
     <!-- header  -->
     <header>
@@ -19,7 +43,6 @@
           <div class = "cart">
             <div class="cart-btns">
                 <button type = "button" id = "cart-btn">
-                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span id = "cart-count-info"></span>
                 </button>
@@ -31,7 +54,7 @@
               <div class = "cart-total">
                 <h3>Total: P</h3>
                 <span id = "cart-total-value"></span>
-                <button class="btn-buy">Place Order</button>
+                <button type="submit" class="btn-buy">Place Order</button>
 
                 <ion-icon 
                 name="close" id="cart-close">
@@ -56,5 +79,93 @@
     </section>
     <!-- end of products section -->
     <script src="assets/script/product.js"></script>
+    <footer>
+      <div class="footer-logo">
+          <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
+      </div>
+      <div class="container-for-footer-content">
+          <div class="content-for-footer">
+              <span class="footer-highlight">VISIT BRANCH NEAR YOU</span>
+              <span>
+                  <dl>
+                      <dt>SINDANGAN</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/c9MYdfNaugEcbmio6">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>LABASON</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/k5xeUwUzedR7fJ6u5">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>TAMPILISAN</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/dcUVXatwPVZxZF5eA">View in Google Map</a></dd>
+                  </dl>
+              </span>
+              <span>
+                  <dl>
+                      <dt>DIPOLOG</dt>
+                      <dd>20 Newbury Street4th Floor Boston, MA 02116</dd>
+                      <dd><a href="https://goo.gl/maps/v7yLpdHGQNscF9cV7">View in Google Map</a></dd>
+                  </dl>
+              </span>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">OPEN HOURS</span>
+              <p>Sunday: 10am-6pm</p>
+              <p>Monday: 10am-8pm</p>
+              <p>Tues-Friday: 9am-8pm</p>
+              <p>Saturday: 9am-5pm</p>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">BOOK AN APPOINTMENT</span>
+              <p>+639762929866</p>
+              <p><a href="#">yrabella_beauty@gmail.com</a></p>
+          </div>
+          <div class="content-for-footer">
+              <span class="footer-highlight">FOLLOW US</span>
+              <div class="follow-us-section">
+                  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+              </div>
+          </div>
+
+      </div>
+      <div class="colaborators">
+          <div class="colaborator">
+              <img src="assets/images/devin.jpg">
+              <span>Devin Manalang</span>
+              <span>_________________</span>
+              <span>Colaborator I</span>
+          </div>
+          <div class="colaborator">
+              <img src="assets/images/sweetlLyra.jpg">
+              <span>Sweet Lyra Sugano</span>
+              <span>_________________</span>
+              <span>Colaborator II</span>
+          </div>
+          <div class="colaborator">
+              <img src="assets/images/kenneth.jpg">
+              <span>Kenneth Abenoja</span>
+              <span>_________________</span>
+              <span>Colaborator III</span>
+          </div>
+
+      </div>
+      <div class="copyright">
+          <span>Copyright © 2023 YRA_BELLA BEAUTY. All Rights Reserved.</span>
+      </div>
+
+  </footer>
+
+  
+</body>
+</html>
   </body>
 </html>
