--- a/services-nails-index.html
+++ b/services-nails-index.html
@@ -168,10 +168,9 @@
     <div class="bookAppointmentNowBtn">
         <a href="bookAppointment.html">Book an Appointment Now</a>
     </div>
-    
     <footer>
         <div class="footer-logo">
-            <span class="style-for-logo">Y R A _ B E L L A</span>
+            <span class="style-for-logo"><img src="assets/images/yrabellaLogo.png">Y R A _ B E L L A</span>
         </div>
         <div class="container-for-footer-content">
             <div class="content-for-footer">
@@ -224,6 +223,27 @@
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
+            </div>
+
+        </div>
+        <div class="colaborators">
+            <div class="colaborator">
+                <img src="assets/images/devin.jpg">
+                <span>Devin Manalang</span>
+                <span>_________________</span>
+                <span>Colaborator I</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/sweetlLyra.jpg">
+                <span>Sweet Lyra Sugano</span>
+                <span>_________________</span>
+                <span>Colaborator II</span>
+            </div>
+            <div class="colaborator">
+                <img src="assets/images/kenneth.jpg">
+                <span>Kenneth Abenoja</span>
+                <span>_________________</span>
+                <span>Colaborator III</span>
             </div>
 
         </div>
