--- a/index.html
+++ b/index.html
@@ -81,19 +81,26 @@
         <p>Our Beauty Spa aims to provide the best services to our beloved customers. We cater hair, facial, nail and body massage services. It is our biggest priority to make our customers achieve the confidence they want to have by giving them the best hair style, nail designs, and facial to enhance and maintain the beauty they possess.</p>
         <p>Our Spa is also child friendly place. We have a place where the parents can leave their kids and have fun so they can relax and enjoy your appointments.</p>
         <p>It is the owner's ever dream to build a service that could help every individual in helping them build their confidence, and by doing make overs is one of the best way to do so.</p>
-        <div class="people-section">
-            <div class="people">
-                <div class="photo photo1"></div>
-                <span>Kevin Louis-Charles</span>
+        <div class="colaborators">
+            <div class="colaborator">
+                <img src="assets/images/devin.jpg">
+                <span>Devin Manalang</span>
                 <span>_________________</span>
-                <span>CEO</span>
+                <span>Owner</span>
             </div>
-            <div class="people">
-                <div class="photo photo2"></div>
-                <span>Evens Louis-Charles</span>
+            <div class="colaborator">
+                <img src="assets/images/sweetlLyra.jpg">
+                <span>Sweet Lyra Sugano</span>
                 <span>_________________</span>
-                <span>COO</span>
+                <span>Manager</span>
             </div>
+            <div class="colaborator">
+                <img src="assets/images/kenneth.jpg">
+                <span>Kenneth Abenoja</span>
+                <span>_________________</span>
+                <span>Auditor</span>
+            </div>
+
         </div>
     </div>
     <div class="about-us-btns">
@@ -193,6 +200,39 @@
         </div>
     </div>
     </div>
+    <span class="reviews">Reviews</span>
+    <div class="people-section">
+        <div class="people">
+            <div class="photo photo1"></div>
+            <span>Shanny Luz Recentes</span>
+            <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
+            <p>My time during the hair treatment was super amazing! </p>
+        </div>
+        <div class="people">
+            <div class="photo photo2"></div>
+            <span>Evens Louis-Charles</span>
+            <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
+            <p>I very much enjoyed the attention to detail when adjusting various parts of the body and stretching or massaging based on what's needed, and in a way that can actually help your pain points feel better. </p>
+        </div>
+        <div class="people">
+            <div class="photo photo3"></div>
+            <span>Evens Louis-Charles</span>
+            <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
+            <p>Love my new bangs! </p>
+        </div>
+        <div class="people">
+            <div class="photo photo4"></div>
+            <span>Evens Louis-Charles</span>
+            <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
+            <p>Got my make up done on time and slayed at the event!</p>
+        </div>
+        <div class="people">
+            <div class="photo photo5"></div>
+            <span>Cassy Legazpi</span>
+            <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
+            <p>I love my new new nails! </p>
+        </div>
+    </div>
     
     <footer>
         <div class="footer-logo">
@@ -249,27 +289,6 @@
                     <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
-            </div>
-
-        </div>
-        <div class="colaborators">
-            <div class="colaborator">
-                <img src="assets/images/devin.jpg">
-                <span>Devin Manalang</span>
-                <span>_________________</span>
-                <span>Colaborator I</span>
-            </div>
-            <div class="colaborator">
-                <img src="assets/images/sweetlLyra.jpg">
-                <span>Sweet Lyra Sugano</span>
-                <span>_________________</span>
-                <span>Colaborator II</span>
-            </div>
-            <div class="colaborator">
-                <img src="assets/images/kenneth.jpg">
-                <span>Kenneth Abenoja</span>
-                <span>_________________</span>
-                <span>Colaborator III</span>
             </div>
 
         </div>
