--- a/products-index.html
+++ b/products-index.html
@@ -54,7 +54,7 @@
               <div class = "cart-total">
                 <h3>Total: P</h3>
                 <span id = "cart-total-value"></span>
-                <button type="submit" class="btn-buy">Place Order</button>
+                <a href="userDashboard.html" class="btn-buy">Place Order</a>
 
                 <ion-icon 
                 name="close" id="cart-close">
@@ -134,27 +134,6 @@
                   <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                   <a href="#"><i class="fa-brands fa-tiktok"></i></a>
               </div>
-          </div>
-
-      </div>
-      <div class="colaborators">
-          <div class="colaborator">
-              <img src="assets/images/devin.jpg">
-              <span>Devin Manalang</span>
-              <span>_________________</span>
-              <span>Colaborator I</span>
-          </div>
-          <div class="colaborator">
-              <img src="assets/images/sweetlLyra.jpg">
-              <span>Sweet Lyra Sugano</span>
-              <span>_________________</span>
-              <span>Colaborator II</span>
-          </div>
-          <div class="colaborator">
-              <img src="assets/images/kenneth.jpg">
-              <span>Kenneth Abenoja</span>
-              <span>_________________</span>
-              <span>Colaborator III</span>
           </div>
 
       </div>
