--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
         </div>
         <div class="people">
             <div class="photo photo3"></div>
-            <span>Evens Louis-Charles</span>
+            <span>Melissa Anne</span>
             <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
             <p>Love my new bangs! </p>
         </div>
         <div class="people">
             <div class="photo photo4"></div>
-            <span>Evens Louis-Charles</span>
+            <span>Alexa Shin</span>
             <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
             <p>Got my make up done on time and slayed at the event!</p>
         </div>
